--- a/week01-markdown-viewer/src/components/TextArea.css
+++ b/week01-markdown-viewer/src/components/TextArea.css
@@ -13,4 +13,5 @@ textarea
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
     border: 3px solid #4F4557;
+    color: #393646;
 }
